--- a/templates/base.html
+++ b/templates/base.html
@@ -2,17 +2,21 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 
 <body>
-    {% block content %}
-    {% endblock %}
-    <a href="/">HOME</a>
-    <a href="/sobre/">SOBRE</a>
-    <a href="/contato/">CONTATO</a>
+
+  <a href="{% url 'lojaapp:home'%}">HOME</a>
+  <a href="{% url 'lojaapp:sobre'%}">SOBRE</a>
+  <a href="{% url 'lojaapp:contato'%}">CONTATO</a>
+  <a href="{% url 'lojaapp:todosprodutos'%}">CATEGORIAS</a>
+  <hr>
+  {% block content %}
+  {% endblock %}
+
 </body>
 
 </html>
