--- a/templates/contato.html
+++ b/templates/contato.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
 {%block title%}CONTATO{% endblock%}
 {% block content %}
-<h1>PAGINA CONTATO</h1>
+<h1 class="text-center">PAGINA CONTATO</h1>
 {% endblock %}
