--- a/templates/home.html
+++ b/templates/home.html
@@ -1,19 +1,23 @@
 {% extends 'base.html' %}
-{%block title%}HOME{%endblock%}
-<h1>PAGINA HOME</h1>
+{%block title%}HOME{% endblock%}
+
 {% block content %}
 
-<div class="contairer">
-    <div class="row">
-        {%for p in produto_list%}
+<div class="container">
+    <h1 class="text-center">PAGINA HOME</h1>
+    <hr>
+    <div class="row mt-3">
+        {% for p in produto_list%}
         <div class="col-md-4">
-            <h4>{{p.titulo}}</h4>
-            <img src="{{p.image.url}}" alt="" width="150">
+            <div class="m-3">
+                <h4>{{p.titulo}}</h4>
+                <img src="{{p.image.url}}" alt="" class="img-fluid" width="150">
+                <p class="mt-3">Preço: <strike>R$ {{p.preco_mercado}}</strike> R$ {{p.venda}} </p>
+                <a href="" class="btn btn-success">COMPRAR</a>
+            </div>
         </div>
-        {% endfor %}
+        {% endfor%}
     </div>
+
 </div>
-
-
-
 {% endblock %}
