--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
 {%block title%}SOBRE{% endblock%}
 {% block content %}
-<h1>PAGINA SOBRE</h1>
+<h1 class="text-center">PAGINA SOBRE</h1>
 {% endblock %}
