--- a/templates/home.html
+++ b/templates/home.html
@@ -10,10 +10,10 @@
         {% for p in produto_list%}
         <div class="col-md-4">
             <div class="m-3">
-                <h4>{{p.titulo}}</h4>
+                <h4><a href="{% url 'lojaapp:produtodetalhe' p.slug %}">{{p.titulo}}</a></h4>
                 <img src="{{p.image.url}}" alt="" class="img-fluid" width="150">
                 <p class="mt-3">Preço: <strike>R$ {{p.preco_mercado}}</strike> R$ {{p.venda}} </p>
-                <a href="" class="btn btn-success">COMPRAR</a>
+                <a href="{%url 'lojaapp:addcarro' p.id %}" class="btn btn-success">COMPRAR</a>
             </div>
         </div>
         {% endfor%}
