--- a/templates/produtodetalhe.html
+++ b/templates/produtodetalhe.html
@@ -6,12 +6,24 @@
 <div class="container">
     <h1>PAGINA TODOS PRODUTOS DA CATEGORIA</h1>
 
-
-
-    <h1>Produto: {{produto.titulo}}</h1>
-    <hr>
-
-
+    <h4>Produto: {{produto.titulo}}</h4>
+    <div class="row">
+        <div class="col-md-6">
+            <img src="{{produto.image.url}}" alt="" class="img-fluid" width="380px">
+        </div>
+        <div class="col-md-6 text-left">
+            <h3>{{produto.titulo}} ( {{produto.visualizacao}} Visualização ) </h3>
+            <h4>Categoria: {{produto.Categorias}}</h4>
+            <p class="mt-3">Preço: <strike>R${{produto.preco_mercado}}</strike> R${{produto.venda}} </p>
+            <a href="{%url 'lojaapp:addcarro' produto.id %}" class="btn btn-success">COMPRAR</a>
+            <hr>
+            <h5 class="text-danger">Garantia: {{produto.garantia}}</h5>
+            <h5 class="text-danger">Devolução: {{produto.return_devolucao}}</h5>
+            <hr>
+            <h5 class="text-success">Descrição:</h5>
+            <h5 class="text-success">{{produto.descricao}}</h5>
+        </div>
+    </div>
 </div>
 
 
