--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
   <a href="{% url 'lojaapp:sobre'%}">SOBRE</a>
   <a href="{% url 'lojaapp:contato'%}">CONTATO</a>
   <a href="{% url 'lojaapp:todosprodutos'%}">CATEGORIAS</a>
+  <a href="{% url 'lojaapp:meucarro'%}">CARRINHO</a>
   <hr>
   {% block content %}
   {% endblock %}
